# shorts

./: README.md  main.py  naver_news.py  pyproject.toml
src/: nate_news.py  news_video.py  shorts_prompt.py  veo3.py
